--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
     "firebase": "^5.8.5",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "mui-datatables": "^2.0.0-beta.59",
     "npm": "^6.9.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-dropdown": "^1.6.4",
