--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-dropdown": "^1.6.4",
+    "react-markdown": "^4.0.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-select": "^2.4.1",
