--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
     "firebase": "^5.8.5",
+    "firebase-functions": "^2.2.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mui-datatables": "^2.0.0-beta.59",
@@ -36,5 +37,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@firebase/testing": "^0.7.7"
+  }
 }
