fix(NavHeader): Remove authorization requirement for NavHeader
fix #8

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "thunderbird-camp-manager"
+    "default": "thunderbird-camp-manager",
+    "staging": "thunderbird-camp-manager-test"
   }
 }
