--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@react-pdf/renderer": "^1.5.1",
     "classnames": "^2.2.6",
     "firebase": "^5.8.5",
     "firebase-functions": "^2.2.1",
