--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
   "name": "thunderbird-camp-manager-test",
-  "version": "2.7.1",
+  "version": "3.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "@react-pdf/renderer": "^1.5.1",
+    "@material-ui/core": "^4.9.2",
+    "@material-ui/icons": "^4.9.1",
+    "@react-pdf/renderer": "^1.6.8",
     "classnames": "^2.2.6",
-    "firebase": "^5.8.5",
-    "firebase-functions": "^2.2.1",
-    "lodash": "^4.17.11",
+    "firebase": "^7.8.1",
+    "firebase-functions": "^3.3.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "mui-datatables": "^2.0.0-beta.59",
-    "npm": "^6.9.0",
+    "mui-datatables": "^2.14.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-dropdown": "^1.6.4",
-    "react-markdown": "^4.0.6",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
-    "react-select": "^2.4.1",
-    "react-signature-canvas": "^1.0.1",
+    "react-markdown": "^4.3.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.1",
+    "react-select": "^3.0.8",
+    "react-signature-canvas": "^1.0.3",
     "recompose": "^0.30.0"
   },
   "scripts": {
@@ -41,9 +40,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@firebase/testing": "^0.7.7",
-    "commitizen": "^3.0.7",
-    "cz-conventional-changelog": "^2.1.0"
+    "@firebase/testing": "^0.16.8",
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "^3.1.0"
   },
   "config": {
     "commitizen": {
