--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dropdown": "^1.6.4",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.4.0",
+    "react-scroll": "^1.7.16",
     "react-select": "^3.0.8",
     "react-signature-canvas": "^1.0.3",
     "recompose": "^0.30.0"
