--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mui-datatables": "^2.14.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-countdown": "^2.2.1",
     "react-dom": "^16.12.0",
     "react-dropdown": "^1.6.4",
     "react-markdown": "^4.3.1",
