--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-countdown": "^2.2.1",
     "react-dom": "^16.12.0",
     "react-dropdown": "^1.6.4",
+    "react-image": "^2.4.0",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "^3.4.0",
     "react-scroll": "^1.7.16",
     "react-select": "^3.0.8",
