--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "3.0.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@react-pdf/renderer": "^1.6.8",
     "classnames": "^2.2.6",
     "firebase": "^7.8.1",
