--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countdown": "^2.2.1",
     "react-dom": "^16.12.0",
     "react-dropdown": "^1.6.4",
+    "react-firebaseui": "^4.1.0",
     "react-image": "^2.4.0",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
