--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^7.8.1",
     "firebase-functions": "^3.3.0",
     "lodash": "^4.17.15",
+    "material-ui-popup-state": "^1.5.3",
     "moment": "^2.24.0",
     "mui-datatables": "^2.14.0",
     "prop-types": "^15.7.2",
@@ -21,6 +22,7 @@
     "react-dropdown": "^1.6.4",
     "react-firebaseui": "^4.1.0",
     "react-image": "^2.4.0",
+    "react-image-gallery": "^1.0.6",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
