--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scroll": "^1.7.16",
     "react-select": "^3.0.8",
     "react-signature-canvas": "^1.0.3",
+    "react-youtube": "^7.9.0",
     "recompose": "^0.30.0"
   },
   "scripts": {
